# Mygame_practice

./: CMakeLists.txt  Game.cpp  Mygame.sln  Mygame.vcxproj  Mygame.vcxproj.filters  Obstacle.cpp  Obstacle.h  Player.cpp
src/: Game.cpp  Game.h  Obstacle.cpp  Obstacle.hpp  Player.cpp  Player.hpp
